# brain_service

./: .flake8  .gitignore  .gitmodules  README.md  TODO  brain_service.code-workspace  pyproject.toml  requirements.txt  robot_env.sh  zakhar_service.code-workspace  zk_start_nodes_hi.sh  zk_start_nodes_lo.sh  zk_start_services.sh
display/: __main__.py
display/display/: __init__.py  __main__.py  checks.py  info.py  luma_ssd1306_mod.py  start.py
doc/: _index.md
python_packages/service_backend/: __init__.py  _status.py  backend.py  dev_status.py  os_status.py  picfg.py
python_packages/service_common/: __init__.py  common_types.py  decorators.py  get.py  internal.py  is_.py  thread.py
python_packages/service_display/: checks.py  info.py  luma_ssd1306_mod.py  start.py
python_packages/service_frontend/: frontend.py
scripts/: display_service.py  display_service_install.sh  display_service_restart.sh  environment.sh  restart_display.sh  service.py  service_install.sh  service_restart.sh  service_status.sh  service_stop.sh  service_uninstall.sh  vars.sh
scripts/init/: TODO.txt  add_source.sh  create_common_dir.sh  create_links.sh  dirs.sh  init.sh  zakhar_profile.sh  zakhar_rc.sh
scripts/python/: packages_download.sh  packages_install_symlinks.sh
scripts/services/: brain.service  brain_backend.service  brain_backend_install.sh  brain_backend_restart.sh  brain_backend_uninstall.sh  brain_frontend.service  brain_frontend_install.sh  brain_frontend_restart.sh  brain_frontend_uninstall.sh  canbus.service  (+13 more)
services/: zakhar_display.service  zakhar_display_install.sh
(+70 files in other folders)
