[tool.poetry]
name = "zakhar_service"
version = "0.1.0"
description = ""
authors = ["Andrei Gramakov <mail@agramakov.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
display = {path = "display"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
